--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,12 +6,12 @@ spring:
       primary: master # 设置默认数据源
       datasource:
         master: # 主数据源
-          url: jdbc:mysql://localhost:3306/master_db?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+          url: jdbc:mysql://localhost:3306/gas_station?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
           username: root
-          password: root
+          password: 123456
           driver-class-name: com.mysql.cj.jdbc.Driver
         slave: # 从数据源
-          url: jdbc:mysql://localhost:3306/slave_db?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+          url: jdbc:mysql://localhost:3306/gas_consumer?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
           username: root
-          password: root
+          password: 123456
           driver-class-name: com.mysql.cj.jdbc.Driver
