统一错误处理

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,14 +3,14 @@ server:
 spring:
   datasource:
     dynamic:
-      primary: master # 设置默认数据源
+      primary: gas_station # 设置默认数据源
       datasource:
-        master: # 主数据源
+        gas_station: # 主数据源
           url: jdbc:mysql://localhost:3306/gas_station?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
           username: root
           password: 123456
           driver-class-name: com.mysql.cj.jdbc.Driver
-        slave: # 从数据源
+        gas_consumer: # 从数据源
           url: jdbc:mysql://localhost:3306/gas_consumer?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
           username: root
           password: 123456
