--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,3 @@
-server:
-  port: 8080
 spring:
   datasource:
     url: jdbc:mysql://111.230.34.189:3306/gas_station?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
@@ -18,3 +16,11 @@ jwt:
     level:
       com.baomidou.mybatisplus.core: DEBUG  # 打印 MyBatis-Plus 的日志
       org.mybatis: DEBUG                    # 打印 MyBatis 的日志
+server:
+  port: 8443
+  ssl:
+    key-store: classpath:keystore.jks
+    key-store-password: gas_station
+    key-alias: mykey
+    key-store-type: JKS
+    enabled-protocols: TLSv1.2, TLSv1.3
