--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,3 @@
-spring:
-  datasource:
-    url: jdbc:mysql://111.230.34.189:3306/gas_station?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
-    username: root
-    password: root
-    driver-class-name: com.mysql.cj.jdbc.Driver
 jwt:
   header: Authorization
   # 令牌前缀
@@ -24,3 +18,24 @@ server:
 #    key-alias: mykey
 #    key-store-type: JKS
 #    enabled-protocols: TLSv1.2, TLSv1.3
+spring:
+  datasource:
+    druid:
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      url: jdbc:mysql://111.230.34.189:3306/gas_station?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+      username: root
+      password: root
+      initial-size: 10               # 初始化连接数
+      max-active: 50                 # 最大连接数，视需求调整
+      min-idle: 10                   # 最小空闲连接数
+      max-wait: 30000                # 获取连接的最大等待时间（毫秒）
+      time-between-eviction-runs-millis: 60000  # 检测空闲连接线程的运行间隔
+      min-evictable-idle-time-millis: 180000    # 连接空闲的最小生存时间
+      validation-query: SELECT 1                 # 测试SQL，视数据库类型调整
+      test-on-borrow: false                      # 获取连接时不测试，提高性能
+      test-while-idle: true                      # 定期检查连接是否有效
+      test-on-return: false                      # 归还连接时不测试
+      pool-prepared-statements: true             # 启用 PSCache
+      max-pool-prepared-statement-per-connection-size: 50  # 每个连接的 PSCache 最大数量
+      filters: stat,wall                         # 监控和防火墙功能
+      connection-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=2000 # 合并监控 SQL，慢 SQL 超时设置
